--- a/countdown.html
+++ b/countdown.html
@@ -4,7 +4,7 @@
         <meta charset='UTF-8'>
         <title>Countdown</title>
         <link rel='stylesheet' href='countdown.css'>
-        <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
     </head>
     <body>
         <p id='countdown'></p>
