--- a/NewYearCountdown/NewYearCountdown.html
+++ b/NewYearCountdown/NewYearCountdown.html
@@ -4,7 +4,7 @@
         <meta charset='UTF-8'>
         <title>New Year Countdown</title>
         <link rel='stylesheet' href='NewYearCountdown.css'>
-        <link href="https://fonts.googleapis.com/css2?family=Rajdhani&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Londrina+Sketch&display=swap" rel="stylesheet">
     </head>
     <body>
         <p id='countdown'></p>
